# rules_antlr

./: .bazelproject  .bazelrc  .bazelversion  .buildifier.json  .ci.bazelrc  .debug.bazelrc  .gitignore  .java.bazelrc  .rbe.bazelrc  .remote-cache.bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  ci.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: bisect.yml  ci.yml  release-drafter.yml  release.yml
antlr/: BUILD  BUILD.bazel  antlr2.bzl  antlr3.bzl  antlr4.bzl  extensions.bzl  impl.bzl  lang.bzl  repositories.bzl
docs/: setup.md
examples/: .bazelrc  .bazelversion  MODULE.bazel  WORKSPACE.bazel
examples/antlr2/Calc/src/main/antlr2/: BUILD.bazel
examples/antlr2/Cpp/src/main/cpp/: BUILD.bazel
examples/antlr2/InheritTinyC/src/main/antlr2/: BUILD.bazel
examples/antlr2/TinyC/src/main/antlr2/: BUILD.bazel
examples/antlr3/Cpp/src/: BUILD.bazel
examples/antlr3/DetectLanguage/src/main/antlr3/: BUILD.bazel
examples/antlr3/InheritLibFolder/src/main/antlr3/: BUILD.bazel
examples/antlr3/InheritSameFolder/src/main/antlr3/: BUILD.bazel
examples/antlr3/Java/src/main/antlr3/: BUILD.bazel
examples/antlr3/LanguageByAttribute/src/main/antlr3/: BUILD.bazel
examples/antlr3/ObjC/src/: BUILD.bazel
examples/antlr3/Python2/src/: BUILD.bazel
examples/antlr3/Python3/src/: BUILD.bazel
examples/antlr4-opt/: .bazelrc
examples/antlr4-opt/Hello/src/main/antlr4/: BUILD.bazel
examples/antlr4/Cpp/src/antlr4/: BUILD.bazel  TLexer.g4  TParser.g4
examples/antlr4/CustomLayout/src/antlrgrammars/foo/bar/: BUILD.bazel
examples/antlr4/DetectLanguage/src/main/antlr4/: BUILD.bazel
examples/antlr4/DetectLanguage/src/main/antlr4/cpp/: Cpp.g4
examples/antlr4/DetectLanguage/src/main/antlr4/csharp/: CSharp.g4
examples/antlr4/DetectLanguage/src/main/antlr4/go/: Go.g4  Gos.g4
examples/antlr4/DetectLanguage/src/main/antlr4/go/split/: GoauLexer.g4  GoauParser.g4
examples/antlr4/DetectLanguage/src/main/antlr4/java/: Java.g4  Javas.g4
examples/antlr4/DetectLanguage/src/main/antlr4/javascript/: JavaScript.g4
examples/antlr4/DetectLanguage/src/main/antlr4/python2/: Python2.g4
examples/antlr4/DetectLanguage/src/main/antlr4/python3/: Python3.g4
examples/antlr4/DetectLanguage/src/main/antlr4/swift/: GrammarLexer.g4  GrammarParser.g4  Swift.g4
examples/antlr4/Go/src/: BUILD.bazel  JSON.g4
examples/antlr4/InheritLibFolder/src/main/antlr4/: BUILD.bazel
examples/antlr4/InheritSameFolder/src/main/antlr4/: BUILD.bazel
examples/antlr4/LanguageByAttribute/src/main/antlr4/override/: BUILD.bazel  Hello.g4
examples/antlr4/LanguageByAttribute/src/main/antlr4/override/deep/: Test.g4
examples/antlr4/LanguageByOption/src/main/antlr4/: BUILD.bazel  Hello.g4
examples/antlr4/NamespaceByAttribute/src/main/antlr4/foo/bar/: BUILD.bazel  Hello.g4
examples/antlr4/NamespaceByConvention/src/main/antlr4/foo/bar/: BUILD.bazel
examples/antlr4/NamespaceByGrammar/src/main/antlr4/: BUILD.bazel  Hello.g4
examples/antlr4/NamespaceGrammarOverConvention/src/main/antlr4/foo/bar/: BUILD.bazel  Hello.g4
examples/antlr4/Python2/: Hello.g4
src/it/java/org/antlr/bazel/: Antlr2Test.java  Antlr3Test.java  Antlr4Test.java  BUILD.bazel  BazelTestSupport.java  Command.java  Disk.java  RepositoriesTest.java  TestProject.java  TestWorkspace.java
src/main/java/org/antlr/bazel/: AntlrRules.java  CaseFormat.java  ContextClassLoader.java  DirectoryLayout.java  Grammar.java  Language.java  LengthComparator.java  Namespace.java  Strings.java  Version.java
src/test/java/org/antlr/bazel/: BUILD.bazel  CaseFormatTest.java  DirectoryLayoutTest.java  GrammarTest.java  LanguageTest.java  NamespaceTest.java  Projects.java  StringsTest.java  UtilityClassTestSupport.java  VersionTest.java
tools/: gen_test_rules.bzl
tools/rc/: BUILD.bazel  README.md
