load("@rules_antlr//antlr:antlr4.bzl", "antlr")
load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

antlr(
    name = "generated",
    srcs = ["Hello.g4"],
)

java_library(
    name = "NamespaceByGrammar",
    srcs = [":generated"],
    deps = ["@antlr4_runtime//jar"],
)
